_course_files/4-DarkReleases/7-istio-rules-BackMatchHeader.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-staff-service
  namespace: default
spec:
  hosts:
    - fleetman-staff-service
  http:
    - match:
        - headers: # to work the aplication must foward the headers (This test app fowrds all headers starting with "x-")
            x-bird:
              exact: canary
      route:
        - destination:
            host: fleetman-staff-service
            subset: canary-group
    - route:
        - destination:
            host: fleetman-staff-service
            subset: stable-group
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-staff-service
  namespace: default
spec:
  host: fleetman-staff-service
  subsets:
    - labels:
        status: stable
      name: stable-group
    - labels:
        status: canary
      name: canary-group
